rust/core/src/search/snapshots/lucid_suggest__search__tests__search_intersection-2.snap
---
source: src/search/mod.rs
expression: hits2
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrr]rrr /0/ [qqqq].. },
            ],
            typos: 3,
            offset: 2,
            trans: 0,
            fin: false,
        },
    },
]
