rust/core/src/search/snapshots/lucid_suggest__search__tests__search_partial.snap
---
source: src/search/mod.rs
expression: hits1
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /1/ [qqqqqq] },
                WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
            ],
            typos: 1,
            offset: 1,
            trans: 0,
            fin: true,
        },
    },
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /1/ [qqqqqq] },
            ],
            typos: 1,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
]
