rust/core/src/search/snapshots/lucid_suggest__search__tests__search_transpositions.snap
---
source: src/search/mod.rs
expression: hits
---
[
    Hit {
        id: 20,
        text: Text { "mailbox" "metal" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
                WordMatch { [rrr]rr /0/ [qqq].. },
            ],
            typos: 2,
            offset: 0,
            trans: 0,
            fin: false,
        },
    },
    Hit {
        id: 10,
        text: Text { "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
                WordMatch { [rrr]rr /0/ [qqq].. },
            ],
            typos: 2,
            offset: 0,
            trans: 2,
            fin: false,
        },
    },
]
